# mast3r_gaussians

./: README.md  compile_rope.sh  download_checkpoints.sh  main.py  pyproject.toml
gaussian-splatting/scene/: __init__.py  cameras.py  dataset_readers.py
gaussian-splatting/utils/: camera_utils.py  general_utils.py
notebooks/: 01_gaussian_splatting_fitting.ipynb  extract_frames.ipynb
